--- a/templates/base.html
+++ b/templates/base.html
@@ -208,6 +208,11 @@
                       </a>
                     </li>
                     <li>
+                      <a href="{% url 'dispatch:teamtwo' %}" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">팀 노선관리</div>
+                      </a>
+                    </li>
+                    <li>
                       <a href="{% url 'dispatch:regularly_station' %}" class="sideMenuNav3Link">
                         <div class="sideMenuNav3Menu">정류장관리</div>
                       </a>
@@ -419,11 +424,7 @@
                         <div class="sideMenuNav3Menu">팀관리</div>
                       </a>
                     </li>
-                    <li>
-                      <a href="{% url 'HR:teamtwo' %}" class="sideMenuNav3Link">
-                        <div class="sideMenuNav3Menu">팀 노선관리</div>
-                      </a>
-                    </li>
+                    
                     <li>
                       <a href="{% url 'HR:teamthree' %}" class="sideMenuNav3Link">
                         <div class="sideMenuNav3Menu">팀 인원관리</div>
