feat: 조직도 사이드메뉴에 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,9 @@
             <div class="sideMenuNav2Box">
               <ul class="sideMenuNav2">
                 <li class="sideMenuNav2Menu">
+                  <a href="{% url 'notice:organizationchart' %}" class="sideMenuNav2Link">조직도</a>
+                </li>
+                <li class="sideMenuNav2Menu">
                   <a href="#" class="sideMenuNav2Link">공지사항</a>
                   <ul class="submenu">
                     <li>
