feat: 차량관리 항목, 서류, 정비내역, 사진 추가
Vehicle 모델 필드 추가, driver_name 삭제

--- a/dispatch/templates/dispatch/bus_print.html
+++ b/dispatch/templates/dispatch/bus_print.html
@@ -34,7 +34,7 @@
                     {% for vehicle in vehicle_list %}
                     <tr class="{{vehicle.id}}">
                         <td>{{vehicle.vehicle_num}}</td>
-                        <td>{{vehicle.driver_name}}</td>
+                        <td>{{vehicle.driver.name}}</td>
                         {% with e_connect=e_connect_object|obj:vehicle.id %}
                         {% with connect=connect_object|obj:vehicle.id %}
                         {% with c_connect=c_connect_object|obj:vehicle.id %}
