--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -61,7 +61,7 @@
                         <div class="hourTd"></div>
                         <div class="hourTd"></div>
                         <div class="hourTd"></div>
-                        <div class="driverTd {{v.id}} d{{v.driver.id}}" title="{{v.vehicle_num0}} {{v.vehicle_num}} ({{v.model_year}})">{{v.vehicle_num}} {% if v.driver_name %}({{v.driver_name}}){% endif %}</div>
+                        <div class="driverTd {{v.id}} d{{v.driver.id}}" title="{{v.vehicle_num0}} {{v.vehicle_num}} ({{v.model_year}})">{{v.vehicle_num}} {% if v.driver %}({{v.driver.name}}){% endif %}</div>
                         <!-- 기사 없으면 괄호 없애기 -->
                     </div>
                     {% endfor %}
