--- a/static/css/vehicle/list.css
+++ b/static/css/vehicle/list.css
@@ -102,59 +102,61 @@ tbody {
     border-bottom: 0.1rem solid #D4D4D4;
 }
 
-tbody td:nth-child(3),
-tbody td:nth-child(13) {
+tbody td:nth-child(11),
+tbody td:nth-child(12),
+tbody td:nth-child(13),
+tbody td:nth-child(14) {
     color: #0069D9;
     cursor: pointer;
 }
 
-td:nth-child(1),
-td:nth-child(2) {
-    width: 3%;
-}
-
-td:nth-child(3) {
-    width: 8%;
-}
-
-td:nth-child(4) {
-    width: 6%;
-}
-
-td:nth-child(5),
-td:nth-child(11),
-td:nth-child(12) {
-    width: 7%;
-}
-
-td:nth-child(6) {
-    justify-content: center;
-    width: 10%;
-}
-
-td:nth-child(7) {
+.contentsAreaBox td:nth-child(1),
+.contentsAreaBox td:nth-child(2) {
     width: 4%;
 }
 
-td:nth-child(8),
-td:nth-child(10) {
-    width: 13%;
-}
-
-td:nth-child(9),
-td:nth-child(14) {
-    width: 5%;
-}
-
-td:nth-child(13) {
+.contentsAreaBox td:nth-child(3) {
     width: 10%;
 }
 
-.tableBody td {
+.contentsAreaBox td:nth-child(4) {
+    width: 6%;
+}
+
+.contentsAreaBox td:nth-child(5) {
+    width: 6%;
+}
+
+.contentsAreaBox td:nth-child(6) {
+    width: 6%;
+}
+
+.contentsAreaBox td:nth-child(7),
+.contentsAreaBox td:nth-child(10) {
+    width: 10%;
+}
+
+.contentsAreaBox td:nth-child(8),
+.contentsAreaBox td:nth-child(9) {
+    width: 6%;
+}
+
+.contentsAreaBox td:nth-child(11),
+.contentsAreaBox td:nth-child(12),
+.contentsAreaBox td:nth-child(13),
+.contentsAreaBox td:nth-child(14) {
+    width: 6%;
+}
+
+.contentsAreaBox td {
     text-align: center;
 }
 
 .btnBox input{
+    background-color: #444444;
+}
+
+.popupFooterMaintenance .btnModules {
     background-color: #444444;
 }
 
@@ -172,9 +174,6 @@ td:nth-child(13) {
     outline: none;
 }
 
-.popupSectionEdit{
-    display: none;
-}
 
 .popupFooterDetail .createBtn{
     display: none;
@@ -184,7 +183,8 @@ td:nth-child(13) {
     width: 13rem;
 }
 
-.editBtn{
+.submitBtn,
+.popupSaveBtn {
     background-color: #0069D9;
     margin-right: 1rem;
 }
@@ -202,4 +202,195 @@ td:nth-child(13) {
     font-size: 1.4rem;
     margin-right: 1rem;
     cursor: pointer;
+}
+
+.popupArticleCategory {
+    width: 100%;
+    padding-bottom: 0.4rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-bottom: 0.1rem solid black;
+    margin-top: 3rem;
+}
+
+.popupArticleCategoryFirst {
+    margin-top: 0;
+}
+
+.popupArticleBoxDoubleHeight {
+    height: 5.6rem;
+}
+
+.popupArticleBoxTextArea {
+    width: 100%;
+    height: 100%;
+}
+
+
+.vehiclePopupBody {
+    overflow-y: auto;
+    display: block;
+    height: 80rem;
+}
+
+.popupArticlePrice {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+}
+
+.popupSearchBox {
+    display: flex;
+    align-items: center;
+}
+
+.popupSearchInput {
+    width: inherit;
+}
+
+.popupSearchInputSelect {
+    margin-left: 1rem;
+}
+
+.searchBtn {
+    background-color: #444444;
+}
+
+.betweenDate {
+    font-size: 2.5rem;
+    margin: 0 1rem;
+}
+
+.popupTableBox {
+    margin-top: 2rem;
+    display: flex;
+    width: 100%;
+    height: 22.4rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.popupTableHeaderBox {
+    width: 100%;
+}
+
+.popupTableHead {
+    width: calc(100% - 0.2rem);
+}
+
+.popupTableBodyBox {
+    width: 100%;
+    height: 19.4rem;
+    overflow-y: auto;
+}
+
+.popupTable {
+    width: 100%;
+    text-align: center;
+}
+
+.popupTable tbody tr:nth-child(odd) {
+    background-color: white;
+}
+
+.popupTable tbody tr:nth-child(even) {
+    background-color: #EFEFEF;
+}
+
+.popupTable td {
+    font-size: 1.4rem;
+    height: 3rem;
+    font-weight: inherit;
+}
+
+.popupTable tr {
+    height: 3rem;
+}
+
+.popupTable td {
+    font-size: 1.4rem;
+    border-left: 0.1rem solid #D4D4D4;
+    border-bottom: 0.1rem solid #D4D4D4;
+    white-space: nowrap;
+    padding: 0 2rem;
+}
+
+.popupTable td:last-child {
+    border-right: 0.1rem solid #D4D4D4;
+}
+
+.popupTable td:nth-child(1) {
+    width: 5%;
+}
+
+.popupTable td:nth-child(2),
+.popupTable td:nth-child(3) {
+    width: 10%;
+}
+
+.popupTable td:nth-child(4),
+.popupTable td:nth-child(6) {
+    width: 22.5%;
+}
+
+.popupTable td:nth-child(5) {
+    width: 40%;
+}
+
+
+
+.popupArticleBox {
+    align-items: center;
+}
+
+.popupSubmitBtn {
+    margin-left: auto;
+    background-color: #0069D9;
+}
+
+select.popupArticleinput {
+    padding-left: 0.5rem;
+}
+
+.popupFooterMaintenance {
+    justify-content: space-between;
+}
+
+.maintenancePopupSearchWorkDate {
+    margin-right: 1rem;
+}
+
+
+
+
+.popupContainerDocument {
+    width: 84rem;
+}
+
+/* photo popup */
+.documentTableBox {
+    margin-top: 2rem;
+}
+
+.documentCoverTable tr {
+    height: auto;
+}
+
+.photoDeleteForm .popupTable td {
+    padding: 0;
+}
+
+.photoDeleteForm .popupTable td:nth-child(1),
+.photoDeleteForm .popupTable td:nth-child(2) {
+    width: 10%;
+}
+
+.photoDeleteForm .popupTable td:nth-child(3), 
+.photoDeleteForm .popupTable td:nth-child(4), 
+.photoDeleteForm .popupTable td:nth-child(5) {
+    width: 15%;
+}
+
+.photoDeleteForm .popupTable td:nth-child(6) {
+    width: 35%;
 }
