--- a/templates/base.html
+++ b/templates/base.html
@@ -208,7 +208,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="{% url 'dispatch:teamtwo' %}" class="sideMenuNav3Link">
+                      <a href="{% url 'dispatch:team_list_view' %}" class="sideMenuNav3Link">
                         <div class="sideMenuNav3Menu">팀 노선관리</div>
                       </a>
                     </li>
