--- a/dispatch/templates/dispatch/teamtwo.html
+++ b/dispatch/templates/dispatch/teamtwo.html
@@ -15,6 +15,11 @@
 {% endblock %}
 
 {% block content %}
+{% if error_message %}
+    <script>
+        alert("{{ error_message }}");
+    </script>
+    {% endif %}
 <div class="routeLayout">
     <div class="groupLayout">
         <div class="groupList">
@@ -31,10 +36,29 @@
                         </svg>
                     </div>
                     <div class="groupName" onclick="location.href='{{ request.path }}'">전체</div>
+                    {% comment %} {% for team in teams %}
+                    <div class="groupNum">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16.5" viewBox="0 0 22 16.5">
+                            <path id="Icon_awesome-folder" data-name="Icon awesome-folder"
+                                d="M19.938,7.25h-8.25L8.938,4.5H2.063A2.062,2.062,0,0,0,0,6.563V18.938A2.062,2.062,0,0,0,2.063,21H19.938A2.062,2.062,0,0,0,22,18.938V9.313A2.062,2.062,0,0,0,19.938,7.25Z"
+                                transform="translate(0 -4.5)" fill="#444" />
+                        </svg>
+                    </div>
+                    <div class="groupName" onclick="">{{ team.team_name }}</div>
+                    {%endfor %} {% endcomment %}
                 </div>
-                <div class="groupListItem {% if team == '팀없음' %}backgroundGray{% endif %}" draggable="true">
-                    
+                {% for team in teams %}
+                <div class="groupListItem">
+                    <div class="groupNum">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16.5" viewBox="0 0 22 16.5">
+                            <path id="Icon_awesome-folder" data-name="Icon awesome-folder"
+                                d="M19.938,7.25h-8.25L8.938,4.5H2.063A2.062,2.062,0,0,0,0,6.563V18.938A2.062,2.062,0,0,0,2.063,21H19.938A2.062,2.062,0,0,0,22,18.938V9.313A2.062,2.062,0,0,0,19.938,7.25Z"
+                                transform="translate(0 -4.5)" fill="#444" />
+                        </svg>
+                    </div>
+                    <div class="groupName" onclick="">{{ team.team_name }}</div>
                 </div>
+                {%endfor %}
                 
 
                 
@@ -42,15 +66,14 @@
         </div>
 
         
-        <form action="" method="post" class="TeamCreates">
-            <input autocomplete="off" type="hidden" name="id" value="{{team.id}}">
+        <form action="{% url 'dispatch:teamtwo_create' %}" method="post" class="TeamCreates">
             {% csrf_token %}
 
             <div class="groupCreateHead">팀 수정</div>
             <div class="groupCreateBody">
               <div class="groupSelectBody">
                 <div class="groupCreateinput">
-                    <select name="role" required class="inputTeamJang">
+                    <select name="team_leader" required class="inputTeamJang">
                         <option value="" disabled selected>팀장 선택</option>
                         {% for member in members %}
                             <option value="{{ member.id }}">{{ member.name }}</option>
@@ -59,7 +82,7 @@
                 </div>
                
                 <div class="groupCreateinput">
-                    <input autocomplete="off" value="{{team.name}}" name="name" type="text" placeholder="팀이름" class="groupNameCreate length50">
+                    <input autocomplete="off" value="{{team.name}}" name="team_name" type="text" placeholder="팀이름" class="groupNameCreate length50">
                 </div>
 
               </div> 
@@ -239,12 +262,7 @@
             teamNameInput.value = '';  // 팀 이름도 초기화
         });
     
-        saveButton.addEventListener('click', function(event) {
-            if (!teamIdInput.value) {
-                alert('기존 팀이 선택되지 않았습니다. 신규 팀을 먼저 등록하세요.');
-                event.preventDefault();  // 기존 팀 없으면 저장 금지
-            }
-        });
+        
     });
 </script>
 {% endblock %}
