--- a/rules/templates/rules/managerrules.html
+++ b/rules/templates/rules/managerrules.html
@@ -120,6 +120,11 @@
                 <div class="approvalMain">제 16조 「배차 일정 공지」</div>
                 <div class="approvalSub">배차 일정을 승무원들에게 사전에 공지하여 혼선이 없도록 합니다.</div>
             </li>
+            <li>
+                <div class="approvalMain">CF.1 「일반 배차 금액」</div>
+                <div class="approvalSub"></div>
+            </li>
+            
         </ol>
     </section>
     
@@ -232,7 +237,7 @@
       <thead>
         <tr>
           <th class="highlight">평일기준</th>
-          <th class="header">편도km</th>
+          <th class="header">왕복km</th>
           <th class="header">65</th>
           <th class="header">130</th>
           <th class="header">195</th>
@@ -456,7 +461,7 @@
       <thead>
         <tr>
           <th class="highlight">휴일기준</th>
-          <th class="header">편도km</th>
+          <th class="header">왕복km</th>
           <th class="header">65</th>
           <th class="header">130</th>
           <th class="header">195</th>
