신현재 브랜치 불러지구전 찐 커밋

--- a/dispatch/templates/dispatch/schedule.html
+++ b/dispatch/templates/dispatch/schedule.html
@@ -175,6 +175,59 @@
     </form>
 </div>
 
+<div class="popupAreaModules2">
+    <div class="popupBgModules"></div>
+    <form class="popupContainer">
+
+        <div class="popupHeader">
+            <div class="popupTitle">노선정보확인</div>
+        </div>
+
+        <div class="PopupDataArea">
+            <div class="PopupDataBox">
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">노선이름</span>
+                    <div class="driverName"></div>
+                </div>
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">이름</span>
+                    <div class="driverName"></div>
+                </div>
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">차량번호</span>
+                    <div class="vehicleNum"></div>
+                </div>
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">연락처</span>
+                    <div class="driverPhone"></div>
+                </div>
+            </div>
+            <div class="shcedulePopupTableBox">
+                <table class="shcedulePopupTableHeader popupTable">
+                    <thead>
+                        <tr>
+                            <td>순번</td>
+                            <td>업무</td>
+                            <td>현황</td>
+                            <td>완료시간</td>
+                        </tr>
+                    </thead>
+                </table>
+                <div class="shcedulePopupTableBodyBox">
+                    <table class="shcedulePopupTableBody popupTable">
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="PopupBtnBox">
+            <div class="btnModules">닫기</div>
+        </div>
+
+    </form>
+</div>
 
 {% endblock %}
 
