--- a/dispatch/templates/dispatch/schedule.html
+++ b/dispatch/templates/dispatch/schedule.html
@@ -175,6 +175,69 @@
     </form>
 </div>
 
+<div class="popupAreaModules2">
+    <div class="popupBgModules"></div>
+    <form class="popupContainer">
+
+        <div class="popupHeader">
+            <div class="popupTitle">노선정보확인</div>
+        </div>
+
+        <div class="PopupDataArea">
+            <div class="PopupDataBox">
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">노선이름</span>
+                    <div class="routeName">병점 1</div>
+                </div>
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">이름</span>
+                    <div class="driverName">신현재</div>
+                </div>
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">차량번호</span>
+                    <div class="vehicleNum">12나1234</div>
+                </div>
+                <div class="PopupDataCell">
+                    <span class="PopupDataTitle">연락처</span>
+                    <div class="driverPhone">010-1234-1234</div>
+                </div>
+            </div>
+            <div class="shcedulePopupTableBox">
+                <div class="PopupBtnBox">
+                    <div class="btnModules">수정</div>
+                </div>
+                <table class="shcedulePopupTableHeader popupTable">
+                    <thead>
+                        <tr>
+                            <td>순번</td>
+                            <td>업무</td>
+                            <td>현황</td>
+                            <td>완료시간</td>
+                        </tr>
+                    </thead>
+                </table>
+                <div class="shcedulePopupTableBodyBox">
+                    <table class="shcedulePopupTableBody popupTable">
+                        <tbody>
+                            <tr>
+                            <td>1.</td>
+                            <td>운행 전</td>
+                            <td>완료</td>
+                            <td>07:10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="PopupunderBtnBox">
+            <div class="btncloseModules">닫기</div>
+            <div class="btnsaveModules">저장</div>
+        </div>
+
+    </form>
+</div>
 
 {% endblock %}
 
